# matharena

./: .gitignore  README.md  README_arxivbench.md  README_euler.md  _fetch_problems.py  _grade_batch.py  pyproject.toml  run-parallel.mjs  run.mjs  solve.mjs
app/: app.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: base.html  index.html  message.html  model.html  problem.html
arxivmath/: app.py  create.sh  create_queries.py  download_arxiv_math.py  export_accepted_questions.py  fulltext_review.py  verify_queries.py
arxivmath/prompts/: prompt.md  prompt_fulltext_review.md  prompt_prior_work_filter.md  prompt_solid_authors.md  prompt_verify.md
arxivmath/templates/: paper.html
configs/agent_scaffolds/: deepseek_math.yaml
configs/competitions/aime/: aime_2025.yaml
configs/competitions/apex/: apex_2025.yaml  shortlist_2025.yaml
configs/competitions/arxiv/: all.yaml  december.yaml  december_tools.yaml  january.yaml  january_tools.yaml
configs/competitions/brumo/: brumo_2025.yaml
configs/competitions/cmimc/: cmimc_2025.yaml
configs/competitions/euler/: euler.yaml
configs/competitions/hmmt/: hmmt_feb_2025.yaml  (+1 more)
docker/: Dockerfile
scripts/: check.py  nuke_single_run.py  regrade.py  run.py  run_all_fa.sh  run_all_kangaroo.sh
scripts/curation/: nuke_problems.py  test_parser_changes.py  upload_competition.py  upload_outputs.py
src/matharena/: api_client.py  arxivbench_utils.py  configs.py  grader.py  parse_manual.py  parser.py  request_logger.py  runner.py  runs.py  utils.py
tests/: test_code_execution.py
(+105 files in other folders)
